--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^1.19.2"
   },
   "dependencies": {
+    "@hapi/joi": "^15.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
