--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.28",
     "core-js": "^2.6.5",
+    "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
     "vuex-router-sync": "^5.0.0"
   },
